--- a/ece-188/src/app/globals.css
+++ b/ece-188/src/app/globals.css
@@ -31,3 +31,9 @@ body {
     text-wrap: balance;
   }
 }
+
+@layer components {
+  .sidebar-icon {
+    @apply relative flex items-center justify-center h-12 w-12 mt-2 mb-2 mx-auto bg-gray-200 hover:bg-gray-400 rounded-3xl hover:rounded-xl transition-all duration-300 ease-linear
+  }
+}
