--- a/ece-188/src/app/globals.css
+++ b/ece-188/src/app/globals.css
@@ -36,4 +36,8 @@ body {
   .sidebar-icon {
     @apply relative flex items-center justify-center h-12 w-12 mt-2 mb-2 mx-auto bg-gray-200 hover:bg-gray-400 rounded-3xl hover:rounded-xl transition-all duration-300 ease-linear
   }
+
+  .sidebar-tooltip {
+    @apply absolute w-auto p-2 m-6 min-w-max left-14 rounded-md shadow-md bg-black text-white font-bold transition-all duration-100 scale-0 origin-left
+  }
 }
